modified swagger params, add 2 new api (login/signup), add inviteMapperInterface)
