# src/main/resources/swagger.yaml
@@ -7,35 +7,76 @@ tags:
     description: API for managing events
   - name: Invites
     description: API for managing invites
+  - name: Login
+    description: API for Login
+  - name: Signup
+    description: API for Signup
 
 definitions:
   Event:
     type: object
     properties:
+      id: 
+        type: integer
+        format: int64
       nome:
         type: string
         description: Name of the event
-      data:
+      date:
         type: string
-        format: date
+        format: date-time
         description: Date of the event
-      luogo:
+      place:
         type: string
         description: Location of the event
-      ospiti:
+      guests:
         type: array
         description: List of guests
         items:
           type: string
+          
   Invite:
     type: object
     properties:
-      nome:
+      id:
+        type: integer
+        format: int64
+      name:
         type: string
         description: Name of the invited guest
       email:
         type: string
         description: Email address of the invited guest
+        
+  Login:
+    type: object
+    required:
+      - "username"
+      - "password"
+    properties:
+      id:
+        type: integer
+      username: 
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+        
+  ErrorModel:
+    type: object
+    required:
+      - "errorCode"
+      - "errorMessage"
+    properties:
+      errorCode: 
+        type: string
+      errorMessage:
+        type: string
+      errors:
+        type: object
+        additionalProperties:
+          type: object
 paths:
   /event:
     post:
@@ -64,6 +105,7 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Event'
+              
   /event/{eventId}:
     get:
       tags:
@@ -155,3 +197,60 @@ paths:
       responses:
           204:
             description: L'invito è stato cancellato con successo
+            
+  /login:
+    post:
+      tags:
+        - Login
+      summary: Login API
+      operationId: login
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/Login'
+      responses:
+        200:
+          description: Success
+        500:
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ErrorModel'
+        401:
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ErrorModel'
+        400:
+          description: BadRequest
+          schema:
+            $ref: '#/definitions/ErrorModel'
+            
+  /signup:
+    post:
+      tags:
+        - Signup
+      summary: Signup API
+      operationId: signup
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/Login'
+      responses:
+        200:
+          description: Success
+        500:
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ErrorModel'
+        401:
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ErrorModel'
+        400:
+          description: BadRequest
+          schema:
+            $ref: '#/definitions/ErrorModel'
+          
